--- a/infrastruct/ansible/roles/obs-studio/defaults/main.yml
+++ b/infrastruct/ansible/roles/obs-studio/defaults/main.yml
@@ -4,6 +4,9 @@
 # Profile name (will be created if doesn't exist)
 obs_profile_name: "Recording"
 
+# Scene collection name
+obs_scene_collection_name: "Recording"
+
 # Recording output directory
 obs_recording_path: "{{ ansible_env.HOME }}/Videos/OBS"
 
@@ -25,8 +28,23 @@ obs_output:
   width: 64
   height: 64
 
+# Source Record filter settings (for per-source recording)
+obs_source_record:
+  width: 1280
+  height: 720
+  bitrate: 1200
+
 # Recording format
 obs_recording_format: "mkv"
 
 # FPS
 obs_fps: 30
+
+# UUIDs for OBS sources (generated once, reused)
+# These ensure consistent references across scene collection
+obs_uuid_desktop_audio: "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
+obs_uuid_mic: "b2c3d4e5-f6a7-8901-bcde-f12345678901"
+obs_uuid_scene: "c3d4e5f6-a7b8-9012-cdef-123456789012"
+obs_uuid_monitor1: "d4e5f6a7-b8c9-0123-def1-234567890123"
+obs_uuid_clock: "e5f6a7b8-c9d0-1234-ef12-345678901234"
+obs_uuid_filter_monitor1: "f6a7b8c9-d0e1-2345-f123-456789012345"
