feat(ansible): add second monitor with Source Record filter to OBS scene template

--- a/infrastruct/ansible/roles/obs-studio/defaults/main.yml
+++ b/infrastruct/ansible/roles/obs-studio/defaults/main.yml
@@ -48,3 +48,5 @@ obs_uuid_scene: "c3d4e5f6-a7b8-9012-cdef-123456789012"
 obs_uuid_monitor1: "d4e5f6a7-b8c9-0123-def1-234567890123"
 obs_uuid_clock: "e5f6a7b8-c9d0-1234-ef12-345678901234"
 obs_uuid_filter_monitor1: "f6a7b8c9-d0e1-2345-f123-456789012345"
+obs_uuid_monitor2: "a7b8c9d0-e1f2-3456-0123-567890123456"
+obs_uuid_filter_monitor2: "b8c9d0e1-f2a3-4567-1234-678901234567"
