--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "falkordb": "^6.4.0",
+    "langfuse": "^3.38.6",
     "playwright": "1.57.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-core": "^21.5.0",
