--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "falkordb": "^6.4.0",
     "langfuse": "^3.38.6",
@@ -29,6 +30,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "ts-node": "^10.9.1",
