--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -14,7 +14,7 @@
     "serve": "ts-node src/server.ts",
     "debug:notebook": "ts-node src/debug-notebooklm.ts",
     "build": "tsc -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -32,8 +32,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.27",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^4.0.16"
   }
 }
