feat(ansible): add LMstudio installation role
- Downloads AppImage from installers.lmstudio.ai
- Creates symlink to ~/.local/bin/lmstudio
- Adds desktop entry for application launcher
- Version configurable via lmstudio_version variable

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -8,3 +8,6 @@
     - role: obs-studio
       # vars:
       #   swiprolog_enabled: false  # Uncomment to skip SWI-Prolog installation
+    - role: lmstudio
+      # vars:
+      #   lmstudio_version: "0.3.23-3"  # Override version if needed
