--- a/infrastruct/ansible/roles/obs-studio/defaults/main.yml
+++ b/infrastruct/ansible/roles/obs-studio/defaults/main.yml
@@ -37,8 +37,10 @@ obs_source_record:
 # Recording format
 obs_recording_format: "mkv"
 
-# FPS
-obs_fps: 30
+# FPS (fractional: fps_num / fps_den)
+# 0.5 FPS = 1 frame every 2 seconds (saves massive disk space)
+obs_fps_num: 1
+obs_fps_den: 2
 
 # UUIDs for OBS sources (generated once, reused)
 # These ensure consistent references across scene collection
