feat(ansible): implement dynamic LMstudio version check
- Added get_latest_version.py to scrape lmstudio.ai
- Handles escaped JSON in Next.js hydration data
- Correctly parses version+build (e.g., 0.3.36-1)
- Updated role to dl latest AppImage automatically

--- a/infrastruct/ansible/roles/lmstudio/defaults/main.yml
+++ b/infrastruct/ansible/roles/lmstudio/defaults/main.yml
@@ -1,14 +1,7 @@
 ---
 # LM Studio role defaults
 
-# Version to install
-lmstudio_version: "0.3.23-3"
-
 # Installation directory
 lmstudio_install_dir: "{{ ansible_env.HOME }}/.local/share/lmstudio"
-
-# AppImage filename
-lmstudio_appimage_name: "LM-Studio-{{ lmstudio_version }}-x64.AppImage"
-
-# Download URL
-lmstudio_download_url: "https://installers.lmstudio.ai/linux/x64/{{ lmstudio_version }}/{{ lmstudio_appimage_name }}"
+# Note: Version is now detected dynamically via get_latest_version.py script.
+# Hardcoded versions in this file are no longer used by default.
