--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -9,5 +9,6 @@
       # vars:
       #   swiprolog_enabled: false  # Uncomment to skip SWI-Prolog installation
     - role: lmstudio
+      tags: lmstudio
       # vars:
       #   lmstudio_version: "0.3.23-3"  # Override version if needed
