feat(ansible): add wtw.a desktop to inventory and create Input Leap role
- Added workstations group with ntb and wtw.a (Windows desktop)
- Created input-leap Ansible role using Flatpak installation
- Configured for pop-os (server) ↔ wtw.a (client) screen layout
- Added autostart desktop entry for login persistence

--- a/infrastruct/ansible/inventory.yml
+++ b/infrastruct/ansible/inventory.yml
@@ -10,3 +10,14 @@ local:
   hosts:
     localhost:
       ansible_connection: local
+
+# Local workstations (ntb + desktop)
+workstations:
+  hosts:
+    ntb:
+      ansible_connection: local
+    wtw.a:
+      ansible_host: 100.72.49.46
+      ansible_user: simon
+      # Note: Windows host - limited Ansible functionality
+      # Use for documentation/inventory purposes
