feat(ansible): add Windows SSH/PowerShell connection and setup_windows playbook
- Updated wtw.a inventory with ansible_shell_type: powershell
- Created setup_windows.yml for Windows targets
- Successfully installed Chocolatey + Input Leap on wtw.a

--- a/infrastruct/ansible/inventory.yml
+++ b/infrastruct/ansible/inventory.yml
@@ -19,5 +19,6 @@ workstations:
     wtw.a:
       ansible_host: 100.72.49.46
       ansible_user: simon
-      # Note: Windows host - limited Ansible functionality
-      # Use for documentation/inventory purposes
+      ansible_connection: ssh
+      ansible_shell_type: powershell
+      ansible_become: false
