--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@agents/shared": "file:../shared",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "falkordb": "^6.4.0",
