feat(ansible): add x11vnc role for VNC remote access
- Installs x11vnc package
- Configures password-protected VNC access
- Sets up systemd service for auto-start
- Shares current X11 display on port 5900

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -14,3 +14,7 @@
       #   lmstudio_version: "0.3.23-3"  # Override version if needed
     - role: input-leap
       tags: input-leap
+    - role: x11vnc
+      tags: x11vnc
+      # vars:
+      #   vnc_password: "your-secure-password"  # Pass via -e instead
